@startuml
class SocketIO {
    - _socket : SocketIOUnity
    - _sendKeyDeltaTime : float = 0
    - _isSentAESKey : bool = false
    + ip : string
    + sendKeyTimeout : float = 10f
    + SendWebSocketMessageAES(eventName:string, data:string) : void
    + SendWebSocketMessage(eventName:string, data:T) : void
    - SendKey() : void
    # <<override>> Awake() : void
    - Update() : void
    + AddUnityCallback(eventName:string, callback:Action<SocketIOResponse>) : void
    + AddCallback(eventName:string, callback:Action<SocketIOResponse>) : void
    - <<async>> OnDestroy() : void
    - <<async>> OnApplicationQuit() : void
    + <<async>> OnInit() : void
    + GetArchitecture() : IArchitecture
}
class KeyRepPacket {
    + Header : string
    + Value : string
}
"MonoSingleton`1" "<SocketIO>" <|-- SocketIO
IController <|-- SocketIO
SocketIO +-- KeyRepPacket
@enduml
